--- a/BeginCollectionItem.Mvc3Demo/Views/Demo/_OrderItem.cshtml
+++ b/BeginCollectionItem.Mvc3Demo/Views/Demo/_OrderItem.cshtml
@@ -6,22 +6,7 @@
         ViewContext.FormContext = new FormContext();
     }
 }
-<div>
-    @using (Html.BeginCollectionItem("Items"))
-    {
-        <div class="editor-label">
-            @Html.LabelFor(m => m.Product)
-        </div>
-        <div class="editor-field">
-            @Html.DropDownListFor(m => m.Product.Id, Model.Product.Options, Model.Product.Id.HasValue ? null : "[Select a product]")
-            @Html.ValidationMessageFor(m => m.Product.Id)
-        </div>
-        <div class="editor-label">
-            @Html.LabelFor(m => m.Quantity)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(m => m.Quantity)
-            @Html.ValidationMessageFor(m => m.Quantity)
-        </div>
-    }
-</div>
+@using (Html.BeginCollectionItem("Items"))
+{
+    @Html.EditorForModel()
+}
