Fix bug with demo jquery and release version 1.2 of the nuget package.

--- a/BeginCollectionItem.Mvc3Demo/Views/Demo/Order.cshtml
+++ b/BeginCollectionItem.Mvc3Demo/Views/Demo/Order.cshtml
@@ -48,7 +48,7 @@
                 $.ajax({
                     url: url,
                     success: function (html) {
-                        $(html).appendTo(ul).wrap('<li />');
+                        $('<li />').html(html).appendTo(ul);
                         var form = ul.closest('form');
                         form.removeData('validator');
                         form.removeData('unobtrusiveValidation');
